--- a/despachos.html
+++ b/despachos.html
@@ -81,19 +81,23 @@
                 <i class="bi bi-box-arrow-in-down"></i>
             </button>
             <!-- Botón para filtrar por antigüedad -->
-            <button class="btn btn-danger ml-2" id="filterOldestBtn" title="Filtrar por antigüedad">
+            <button class="btn btn-danger" id="filterOldestBtn" title="Filtrar por antigüedad">
                 <i class="bi bi-clock"></i>
             </button>
             <!-- Botón de Logística Propia -->
-            <button class="btn btn-secondary ml-2" id="logisticaPropiaBtn" data-toggle="modal" data-target="#logisticaModal">
+            <button class="btn btn-secondary" id="logisticaPropiaBtn" data-toggle="modal" data-target="#logisticaModal">
                 <i class="bi bi-truck"></i> Local
             </button>
             <!-- Nuevo botón BsAr-StaFe -->
-            <button class="btn btn-info ml-2" id="bsarStaFeBtn" data-toggle="modal" data-target="#bsarStaFeModal">
+            <button class="btn btn-info" id="bsarStaFeBtn" data-toggle="modal" data-target="#bsarStaFeModal">
                 <i class="bi bi-truck"></i> Interior
             </button>
+            <!-- Nuevo botón para abrir el modal de panel de control -->
+            <button class="btn btn-warning" id="controlPanelBtn" data-toggle="modal" data-target="#controlPanelModal">
+                <i class="bi bi-gear"></i> Panel
+            </button>
             <!-- Botón para abrir el modal de escanear remito y adjuntar foto -->
-            <button class="btn btn-success ml-2" id="scanRemitoBtn" data-toggle="modal" data-target="#scanRemitoModal">
+            <button class="btn btn-success" id="scanRemitoBtn" data-toggle="modal" data-target="#scanRemitoModal">
                 <i class="bi bi-camera2"></i>
             </button>
             <button class="btn btn-secondary ml-2" id="promedioBtn" title="Promedio Despacho: Xd Yh Zm">
@@ -348,6 +352,44 @@
     </div>
 </div>
 <!-- Fin Modal Comentario -->
+
+<!-- Modal de Panel de Control -->
+<div class="modal fade" id="controlPanelModal" tabindex="-1" aria-labelledby="controlPanelModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+            <div class="modal-header bg-info text-white">
+                <h5 class="modal-title" id="controlPanelModalLabel">Panel de Control</h5>
+                <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div id="loadingSpinnerLongId" class="d-flex justify-content-center" style="display: none;">
+                    <div id="custom-spinner333" class="spinner-border spinner-border-333 text-info" role="status" style="width: 3rem; height: 3rem;">
+                        <span class="sr-only">Cargando...</span>
+                    </div>
+                </div>
+                <div id="controlPanelContent" style="display: none;">
+                    <div class="list-group">
+                        <button class="list-group-item list-group-item-primary" id="historialStaFeBtn"><i class="bi bi-arrow-right-short"></i> Historial <strong>Santa Fe</strong></button>
+                        <button class="list-group-item list-group-item-primary" id="historialRafaelaBtn"><i class="bi bi-arrow-right-short"></i> Historial <strong>Rafaela</strong></button>
+                        <button class="list-group-item list-group-item-primary" id="historialBsAsBtn"><i class="bi bi-arrow-right-short"></i> Historial <strong>Buenos Aires</strong></button>
+                        <button class="list-group-item list-group-item-primary" id="historialSanNicolasBtn"><i class="bi bi-arrow-right-short"></i> Historial <strong>San Nicolás</strong></button>
+                    </div>
+                    <div id="historialFechas" class="mt-3" style="display: none;">
+                        <button class="btn btn-secondary mb-2" id="backToHistorialBtn" style="display: none;"><i class="bi bi-arrow-return-left"></i> Volver</button>
+                        <ul class="list-group" id="fechasList"></ul>
+                    </div>
+                    <div id="operacionesList" class="mt-3" style="display: none;">
+                        <button class="btn btn-secondary mb-2" id="backToFechasBtn" style="display: none;">Volver</button>
+                        <ul class="list-group" id="operacionesListGroup"></ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Fin Modal de Panel de Control -->
 
             <!-- Comentarios Alert -->
             <div id="statusCard" class="card">
