--- a/meliAr.html
+++ b/meliAr.html
@@ -197,7 +197,7 @@
                             <option value="domingo">Domingo</option>
                         </select>
                     </div>
-                    <div class="logistica-item col-md-6">
+                    <div class="logistica-item col-md-6 mb-2">
                         <p class="mc-os-dia"><span class="mc-os-circle mc-os-circle-green"></span> Rafaela</p>
                         <select id="logistica-rafaela" class="form-control mc-os-select">
                             <option value="">Sin día predeterminado</option>
@@ -210,7 +210,7 @@
                             <option value="domingo">Domingo</option>
                         </select>
                     </div>
-                    <div class="logistica-item col-md-6">
+                    <div class="logistica-item col-md-6 mb-2">
                         <p class="mc-os-dia"><span class="mc-os-circle mc-os-circle-blue"></span> Santa Fe</p>
                         <select id="logistica-santafe" class="form-control mc-os-select">
                             <option value="">Sin día predeterminado</option>
