--- a/controlMeli.html
+++ b/controlMeli.html
@@ -167,9 +167,9 @@
                         <i class="bi bi-arrow-left"></i> Atrás
                     </button>
                     <div class="d-flex justify-content-center my-3 contenedor-spinner33">
-                        <div id="spinner33"class="spinner-border text-info" role="status">
+                        <div id="spinner33" class="spinner-border text-info" role="status">
                             <span class="visually-hidden"></span>
-                          </div>
+                        </div>
                     </div>
                     <ol class="list-group list-group-numbered etiquetaList" id="folderList"></ol>
                 </div>
@@ -179,7 +179,8 @@
                     </button>
                     <button type="button" class="btn btn-primary" onclick="uploadFile()">
                         <i class="bi bi-upload"></i> Subir
-                    </button>                </div>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
