--- a/controlMeli.html
+++ b/controlMeli.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 mb-3 d-flex justify-content-end botonesMeli">
+            <div class="col-md-6 mb-3 d-flex justify-content-end botonesMeli">
                 <!-- Aca van los botones -->
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#etiquetasModal">
                     <i class="bi bi-tag-fill"></i> Etiquetas
@@ -167,7 +167,7 @@
                         <i class="bi bi-arrow-left"></i> Atrás
                     </button>
                     <div class="d-flex justify-content-center my-3 contenedor-spinner33">
-                        <div id="spinner33" class="spinner-border text-info" role="status">
+                        <div id="spinner33" class="spinner-border text-info spinner-large" role="status">
                             <span class="visually-hidden"></span>
                         </div>
                     </div>
