--- a/bna.html
+++ b/bna.html
@@ -136,6 +136,7 @@
         </div> 
         
         <div class="spinner-border" role="status" id="spinner">
+            <img src="./Img/Novogar N.png" alt="Imagen" class="spinner-image">
             <span class="sr-only">Cargando...</span>
         </div>
         
