--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -130,8 +130,9 @@
         <div class="container mt-5" id="cards-container">                   
         
             <div class="spinner-border" role="status" id="spinner">
+                <img src="./Img/Novogar N.png" alt="Imagen" class="spinner-image">
                 <span class="sr-only">Cargando...</span>
-            </div>     
+            </div>   
 
             <!-- Comentarios Alert -->
             <div id="statusCard" class="card">
