--- a/meliAr.html
+++ b/meliAr.html
@@ -472,6 +472,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
         <div class="container mt-5" id="cards-container">
             <div class="spinner-border" role="status" id="spinner">
+                <img src="./Img/Novogar N.png" alt="Imagen" class="spinner-image">
                 <span class="sr-only">Cargando...</span>
             </div>
     
