--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -129,7 +129,7 @@
             
         <div class="container mt-5" id="cards-container">                   
         
-            <div class="spinner-border" role="status" id="spinner">
+            <div class="spinner-border spinner-border37892" role="status" id="spinner">
                 <img src="./Img/Novogar N.png" alt="Imagen" class="spinner-image">
                 <span class="sr-only">Cargando...</span>
             </div>   
