--- a/despachos.html
+++ b/despachos.html
@@ -194,8 +194,12 @@
         </div>
     </div>   
 
+    <!--<div id="spinner2" class="spinner-container" style="display:none;">-->
+        <!--<div class="spinner"></div>-->
+    <!--</div>-->
+
     <div id="spinner2" class="spinner-container" style="display:none;">
-        <div class="spinner"></div>
+        <img src="./Img/etiqueta-animada.gif" alt="Cargando...">
     </div>
 
     <!-- Modal para escanear remito y adjuntar foto -->
