--- a/index.html
+++ b/index.html
@@ -402,13 +402,14 @@
     </form>
 
     <div id="spinner" class="spinner-container" style="display:none;">
-        <div class="spinner"></div>
+        <img src="./Img/etiqueta-animada.gif" alt="Cargando...">
+    </img>
     </div>
 
-    <!-- Botón de flecha hacia arriba -->
-    <a href="#" id="scrollToTop" class="btn btn-warning" style="display: none;">
-    <i class="fas fa-arrow-up"></i>
-    </a>
+     <!-- <div id="spinner" class="spinner-container" style="display:none;">-->>
+        <!--<div class="spinner"></div>-->
+    <!--</div>-->
+
         
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
