--- a/meliAr.html
+++ b/meliAr.html
@@ -524,8 +524,12 @@ document.addEventListener('DOMContentLoaded', function() {
                 <i class="fas fa-arrow-up"></i>
                 </a>
 
+                <!--<div id="spinner2" class="spinner-container" style="display:none;">-->
+                    <!--<div class="spinner"></div>-->
+                <!--</div>-->
+
                 <div id="spinner2" class="spinner-container" style="display:none;">
-                    <div class="spinner"></div>
+                    <img src="./Img/etiqueta-animada.gif" alt="Cargando...">
                 </div>
     
         <footer class="center">
