--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     
     <div class="doble-tel-remito" style="display: flex; gap: 10px;">
         <input type="number" id="telefonoDestinatario" name="TelefonoDestinatario" value="" required placeholder="Teléfono Destinatario">
-        <input type="text" id="nroRemito" name="NroRemito" value="" required placeholder="REMITO ej: 23012345678R">
+        <input type="text" id="nroRemito" maxlength="18" name="NroRemito" value="" required placeholder="REMITO ej: 23012345678R">
     </div>
 
     <label class="label-mensaje-personalizado" for="observaciones">Observaciones:</label>
