--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="firebase-init.js"></script>
     <script src="./js/formulario-andesmar.js"></script>
     <script src="./js/formulario-cds.js"></script>
     <script src="./js/cotizadorCDS.js"></script>
