--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
     </img>
     </div>
 
-     <!-- <div id="spinner" class="spinner-container" style="display:none;">-->>
+     <!-- <div id="spinner" class="spinner-container" style="display:none;">-->
         <!--<div class="spinner"></div>-->
     <!--</div>-->
 
