--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 </select>
             </div>
             <div class="select-item">
-                <label for="unidadVenta">Unidad: (Solo Andesmar)</label>
+                <label for="unidadVenta">Unidad:</label>
                 <select id="unidadVenta" name="UnidadVenta" required>
                     <option value="express rto conformado">PAQUETERIA EXPRESS (-30Kg)</option>
                     <option value="cargas remito conformado" selected>CARGA PESADA (+30Kg)</option>
