--- a/meliAr.html
+++ b/meliAr.html
@@ -547,6 +547,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
     <!-- SweetAlert JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./js/firebase-init.js"></script>
 
 <!-- Cargar dompurify -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.4/purify.min.js"></script>
