--- a/despachos.html
+++ b/despachos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Envios</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Signika:wght@300..700&family=Titan+One&display=swap" rel="stylesheet">
@@ -128,12 +129,16 @@
                     <i class="bi bi-truck-front" style="font-size: 1.5em;"></i>
                     <span class="ml-1">Calculando Andesmar... <span id="andesmarValue"></span></span>
                 </span>
-                <span class="percentage-card text-secondary mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="SinDespacharPorcentaje">
+                <span class="percentage-card text-dark-blue mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="cruzDelSurPorcentaje">
+                    <i class="bi bi-truck-front" style="font-size: 1.5em;"></i>
+                    <span class="ml-1">Calculando Cruz del Sur... <span id="cruzDelSurValue"></span></span>
+                </span>
+                <span class="macos-button-porcentaje" id="SinDespacharPorcentaje">
                     <i class="bi bi-stopwatch-fill" style="font-size: 1.5em;"></i>
                     <span class="ml-1">Calculando Sin Despachar... <span id="SinDespacharValue"></span></span>
                 </span>
-            </div>
-        </div>                            
+            </div> 
+        </div>                     
 
 <div class="table-responsive">
     <table id="data-table" class="table table-striped">
