--- a/despachos.html
+++ b/despachos.html
@@ -139,7 +139,8 @@
                     <span class="ml-1">Calculando Sin Despachar... <span id="SinDespacharValue"></span></span>
                 </span>
             </div> 
-        </div>                     
+        </div>   
+        <div class="estadisticas-header"><i class="bi bi-info-circle-fill"></i> Estadísticas de los últimos 30 días</div>                  
 
 <div class="table-responsive">
     <table id="data-table" class="table table-striped">
