--- a/bna.html
+++ b/bna.html
@@ -229,7 +229,7 @@
         
     <!-- Cargar jsPDF -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    
+    <script src="./js/firebase-init.js"></script>
     <script src="./js/bnaCards.js"></script>
     <script src="./js/features.js"></script>
     <script src="./js/ciudades.js"></script>
