--- a/bna.html
+++ b/bna.html
@@ -102,9 +102,13 @@
                         <i class="bi bi-2-circle-fill" style="font-size: 24px;"></i>
                     </button>
 
-                    <button class="btn btn-warning" data-toggle="modal" data-target="#skuModal" id="openSkuModal" type="button" style="white-space: nowrap">
+                    <button class="btn btn-danger" data-toggle="modal" data-target="#skuModal" id="openSkuModal" type="button" style="white-space: nowrap">
                         <i class="fas fa-laptop" style="font-size: 24px;"></i> 
-                    </button>                    
+                    </button>
+                    
+                    <button class="btn btn-warning" id="duplicateButton" type="button" style="white-space: nowrap; margin-top: 10px;">
+                        <i class="fas fa-clone" style="font-size: 24px;"></i> 
+                    </button>                 
 
                  </div>
 
