--- a/meliAr.html
+++ b/meliAr.html
@@ -66,7 +66,7 @@
                     <li class="nav-item"><a href="./facturacionMl.html" class="nav-link">Fact.</a></li>
                     <li class="nav-item"><a href="./meliAr.html" class="nav-link active"><img id="meli-logo" src="./Img/meli.png">MeLi</a></li>
                     <li class="nav-item"><a href="./controlMeli.html" class="nav-link">Colecta</a></li>
-                    <li class="nav-item"><a href="./bna.html" class="nav-link"><img id="meli-logo" src="./Img/bna-logo.png" alt="BNA Logo" /></a></li>
+                    <li class="nav-item"><a href="./bna.html" class="nav-link">Tiendas Virtuales</a></li>
                 </ul>
             </div>
         </div>
