--- a/index.html
+++ b/index.html
@@ -464,8 +464,7 @@
     </form>
 
     <div id="spinner" class="spinner-container" style="display:none;">
-        <img src="./Img/etiqueta-animada.gif" alt="Cargando...">
-    </img>
+        <img src="./Img/etiqueta-animada.gif" alt="Cargando..."></img>
     </div>
 
      <!-- <div id="spinner" class="spinner-container" style="display:none;">-->
