--- a/bna.html
+++ b/bna.html
@@ -154,8 +154,8 @@
     </div>
     
     <div id="spinner2" class="spinner-container" style="display:none;">
-        <div class="spinner"></div>
-    </div>
+        <img id="spinnerImage" src="./Img/etiqueta-animada.gif" alt="Cargando..."></img>
+    </div>    
     
     <!-- Botón de flecha hacia arriba -->
     <a href="#" id="scrollToTop" class="btn btn-warning" style="display: none;">
