--- a/bna.html
+++ b/bna.html
@@ -69,7 +69,7 @@
                 <div class="input-group">
                     <input type="text" class="form-control" id="searchBna" placeholder="Buscar por nombre, dirección, remito...">
                     <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" type="button">
+                        <button class="btn-search-bna btn btn-outline-secondary" type="button">
                             <i class="fas fa-search"></i>
                         </button>
                     </div>
