--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -201,7 +201,35 @@
             </tbody>
         </table>
     </div>
-    
+
+<!-- Modal Fotografias SKU -->
+<div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="productModalLabel">Imágenes del Producto</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div id="productCarousel" class="carousel carousel2 slide" data-bs-ride="carousel">
+                    <div class="carousel-inner" id="carouselInner">
+                        <!-- Las imágenes del carrusel se cargarán aquí dinámicamente -->
+                    </div>
+                    <a class="carousel-control-prev carousel-control-prev2" href="#productCarousel" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Anterior</span>
+                    </a>
+                    <a class="carousel-control-next carousel-control-next2" href="#productCarousel" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Siguiente</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Fin Modal Fotografias SKU -->
+
     <!-- Pagination -->
                 <nav aria-label="Page navigation">
                     <ul class="pagination justify-content-center" id="pagination"></ul>
