--- a/bna.html
+++ b/bna.html
@@ -156,6 +156,8 @@
         <nav aria-label="Page navigation"></nav>
             <ul class="pagination justify-content-center" id="pagination"></ul>
         </nav>
+
+        <div id="filtered-pagination" style="color: red;"></div>
     </div>
     
     <div id="spinner2" class="spinner-container" style="display:none;">
