--- a/bna.html
+++ b/bna.html
@@ -167,7 +167,13 @@
     <!-- Botón de flecha hacia arriba -->
     <a href="#" id="scrollToTop" class="btn btn-warning" style="display: none;">
         <i class="fas fa-arrow-up"></i>
-    </a>   
+    </a>
+
+    <!-- Botón de flecha hacia Abajo -->
+    <a href="#" id="scrollToDown" class="btn btn-warning" style="display: none;">
+    <i class="fas fa-arrow-down"></i> <!-- Cambiar a flecha hacia abajo -->
+    </a>
+
     
 <!-- Modal para Agregar SKU -->
 <div class="modal fade" id="skuModal" tabindex="-1" role="dialog" aria-labelledby="skuModalLabel" aria-hidden="true">
